# UAVControl

./: .gitignore  CMakeLists.txt  ElementDetailWidget.cpp  ElementDetailWidget.h  ElementDetailWidget_old.h  INSTALL.md  InteractiveMapWidget.cpp  MapPainter.cpp  MapPainter.h  README.md  RegionFeatureDialog.cpp  RegionFeatureDialog.h  TaskDialog.cpp  TaskDialog.h  TaskListWidget.cpp  TaskListWidget.h  TaskManager.cpp  TaskManager.h  install_kyrin.sh  main.cpp
launch/: CMakeLists.txt  LaunchUI.cpp  LaunchUI.h
task/: CMakeLists.txt  CreateTaskDialog.cpp  CreateTaskDialog.h  CreateTaskPlanDialog.cpp  CreateTaskPlanDialog.h  ElementDetailWidget.h  Plan.h  PlanDialog.cpp  PlanDialog.h  RegionDetailWidget.cpp  RegionDetailWidget.h  Task.h  TaskLeftControlWidget.cpp  TaskLeftControlWidget.h  TaskListWidget.cpp  TaskListWidget.h  TaskManager.cpp  TaskManager.h  TaskPlan.h  TaskUI.cpp  TaskUI.h
task/map/: InteractiveMapWidget.h  MapPainter.h
task/map_region/: InteractiveMapWidget.h  MapPainter.cpp  MapPainter.h  MapRegionTypes.h  Region.cpp  Region.h  RegionManager.cpp  RegionManager.h  RegionPropertyDialog.cpp  RegionPropertyDialog.h
test/: test_painter.cpp
tools/: CMakeLists.txt  README.md  TileDownloader.cpp  TileDownloader.h  tile_downloader_cli.cpp
